# fuzztruction-net

./: .dockerignore  .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  eval  networked-binaries
data/: zshrc
env/: build-prebuilt-image.sh  build.sh  config.sh  start.sh  stop.sh
fuzztruction_shared/: Cargo.toml
fuzztruction_shared/src/: communication_channel.rs  constants.rs  dwarf.rs  lib.rs  log_utils.rs  messages.rs  mutation_cache.rs  mutation_cache_content.rs  mutation_cache_entry.rs  types.rs  util.rs
generator/agent/: Cargo.toml  build.rs
generator/agent/src/: agent.rs  lib.rs  logging.rs
generator/agent/src/jit/: jit.rs
generator/pass/: Makefile  ft_custom_pp.h  fuzztruction-preprocessing-pass.cc  fuzztruction-preprocessing-pass.hpp  fuzztruction-source-clang-fast.c  fuzztruction-source-llvm-pass.cc  mem_functions.c
lib/compute_coverage/src/: main.rs
lib/jail/: Cargo.toml
lib/jail/src/: jail.rs  lib.rs
lib/network-fuzzing-introspection/: build.rs
scheduler/: Cargo.toml
scheduler/src/: checks.rs  config.rs  constants.rs  finite_integer_set.rs  io_channels.rs  lib.rs  logging.rs  mutation_cache_ops.rs  mutation_site.rs  networked.rs  sink.rs  sink_bitmap.rs  source.rs  trace.rs
scheduler/src/aflpp/: mod.rs
scheduler/src/cli/: benchmark.rs  fuzztruction.rs  handler.rs  networked_benchmark.rs  patchpoint_inspection.rs  queue.rs  test_patchpoints.rs  util.rs
scheduler/src/competitors/: aflnet.rs  mod.rs  sgfuzz.rs  stateafl.rs  worker.rs
scheduler/src/coverage/: aflnet.rs  classic.rs  mod.rs  networked.rs  postprocess.rs  sgfuzz.rs  stateafl.rs
scheduler/src/fuzzer/: campaign.rs  common.rs  common_networked.rs  event_counter.rs  mod.rs  queue.rs  worker.rs
scheduler/src/fuzzer/worker_impl/: cerebrum.rs  cerebrum_query.rs  common.rs  init.rs  main_loop.rs  mutators.rs  scheduling.rs
scheduler/src/fuzzer/worker_impl/phases/: add.rs  combine.rs  discovery.rs  mod.rs  mutate.rs  run_common.rs  run_phase.rs
scheduler/src/postprocessing/: ft.rs  mod.rs  pcap_extraction.rs
scheduler/tests/: test_generator_instrumentation.rs
scheduler/tests/target_1/: build.sh  generator  generator.c
